--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -9,6 +9,10 @@
   color: #e7e8e9;
   box-shadow: inset 0 -3vw 1vw rgb(33 33 33 / 75%);
   overflow: hidden;
+  transition: 0.9s;
+}
+.card:hover {
+  box-shadow: inset 1vh 100vw 3vw rgb(33 33 33 / 70%);
 }
 
 .card-header {
